src/objects/case_comments__c.object
<CustomObject>
    <fields>
        <fullName>BgColor__c</fullName>
        <label>BgColor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Comment_ID__c</fullName>
        <label>Case Comment ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>case_comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSON_FORMAT_FOR_TEST__c</fullName>
        <label>JSON FORMAT FOR TEST</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <label>NickName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notetype__c</fullName>
        <label>Notetype</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Visible to External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rich_Comment__c</fullName>
        <label>Rich Comment</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Case Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rich_Comment__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>comment-{0000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>